# OpenWrt-Server

./: CMakeLists.txt  build.sh  client.c  main.c  server.c  server.h  server_subscribers.c  server_subscribers.h
test/: client.cpp  client.h  test.cpp
